--- a/bib1.bib
+++ b/bib1.bib
@@ -7,7 +7,7 @@
 	comment = "published = 2004-08-13T10:46:36Z, updated = 2004-08-13T10:46:36Z, 14 pages, 11 figures, A\&amp;A, in press",
 	doi = "10.1051/0004-6361:20041084",
 	eprint = "astro-ph/0408250v1",
-	journal = "Astron.Astrophys. 426 (2004) 985-997",
+	journal = "Astron.Astrophys., 426, 985-997",
 	month = aug,
 	primaryclass = "astro-ph",
 	title = "{Light curves and polarization of accretion- and nuclear-powered millisecond pulsars}",
@@ -23,7 +23,7 @@
 	comment = "published = 2006-08-30T14:57:20Z, updated = 2006-11-23T09:42:59Z, 9 pages, 6 figures; replaced with the version published in MNRAS",
 	doi = "10.1111/j.1365-2966.2006.11088.x",
 	eprint = "astro-ph/0608663v2",
-	journal = "Mon.Not.Roy.Astron.Soc.373:836-844,2006",
+	journal = "MNRAS, 373, 836-844",
 	month = nov,
 	primaryclass = "astro-ph",
 	title = "{Pulse profiles of millisecond pulsars and their Fourier amplitudes}",
@@ -39,7 +39,7 @@
 	comment = {published = 2005-10-03T11:58:33Z, updated = 2006-05-17T18:15:48Z, 14 pages, 6 figures; invited review presented at COSPAR Colloquium "Spectra \&amp; Timing of Compact X-ray Binaries", January 17-20, 2005, Mumbai, India. Advances in Space Research, in press},
 	doi = "10.1016/j.asr.2006.04.025",
 	eprint = "astro-ph/0510038v2",
-	journal = "Adv.SpaceRes.38:2697-2703",
+	journal = "Adv.SpaceRes., 38, 2697-2703",
 	month = may,
 	primaryclass = "astro-ph",
 	title = "{Accretion-powered millisecond pulsars}",
@@ -48,7 +48,7 @@
 	year = "2006"
 }
 
-@misc{miller,
+@article{miller,
 	abstract = "Simultaneous, precise measurements of the mass $M$ and radius $R$ of neutron stars can yield uniquely valuable information about the still uncertain properties of cold matter at several times the density of nuclear matter. One method that could be used to measure $M$ and $R$ is to analyze the energy-dependent waveforms of the X-ray flux oscillations seen during some thermonuclear bursts from some neutron stars. These oscillations are thought to be produced by X-ray emission from hotter regions on the surface of the star that are rotating at or near the spin frequency of the star. Here we explore how well $M$ and $R$ could be determined by generating, and analyzing using Bayesian techniques, synthetic energy-resolved X-ray data that we produce assuming a future space mission having 2--30 keV energy coverage and an effective area of 10 m$^2$, such as the proposed \textit{LOFT} or \textit{AXTAR} missions. We find that if the hot spot is within 10$^\circ$ of the rotation equator, both $M$ and $R$ can usually be determined with an uncertainty of about 10\% if there are $10^6$ total counts from the spot, whereas waveforms from spots within 20$^\circ$ of the rotation pole provide no useful constraints. These constraints can usually be achieved even if the burst oscillations vary with time and data from multiple bursts must be used to obtain 10$^6$ counts from the hot spot. This is therefore a promising method to constrain $M$ and $R$ tightly enough to discriminate strongly between competing models of cold, high-density matter.",
 	archiveprefix = "arXiv",
 	author = "Lo, Ka-Ho and Miller, M. Coleman and Bhattacharyya, Sudip and Lamb, Frederick K.",
@@ -70,7 +70,7 @@
 	comment = "published = 2007-03-06T18:32:44Z, updated = 2007-04-05T19:23:34Z, 8 pages, 4 figures. v2: minor changes. Accepted by the Astrophysical Journal",
 	doi = "10.1086/518648",
 	eprint = "astro-ph/0703123v2",
-	journal = "Astrophys.J.663:1244-1251,2007",
+	journal = "Astrophys.J., 663, 1244-1251",
 	month = apr,
 	primaryclass = "astro-ph",
 	title = "{The Oblate Schwarzschild Approximation for Light Curves of Rapidly Rotating Neutron Stars}",
@@ -86,7 +86,7 @@
 	comment = "published = 2006-09-12T15:21:50Z, updated = 2006-09-12T15:21:50Z, Accepted by the Astrophysical Journal. 13 pages \&amp; 7 figures",
 	doi = "10.1086/509103",
 	eprint = "astro-ph/0609325v1",
-	journal = "Astrophys.J.654:458-469,2007",
+	journal = "Astrophys.J., 654, 458-469",
 	month = sep,
 	primaryclass = "astro-ph",
 	title = "{Light Curves for Rapidly-Rotating Neutron Stars}",
@@ -102,7 +102,7 @@
 	comment = "published = 2015-09-22T12:09:47Z, updated = 2016-03-15T13:01:13Z, 23 pages, 12 figures, revised version, accepted for publication in A\&amp;A",
 	doi = "10.1051/0004-6361/201527416",
 	eprint = "1509.06561v2",
-	journal = "A\&amp;A 591, A25",
+	journal = "A\&amp;A, 591, A25",
 	month = mar,
 	primaryclass = "astro-ph.HE",
 	title = "{Equation of state constraints for the cold dense matter inside neutron stars using the cooling tail method}",
@@ -111,35 +111,26 @@
 	year = "2016"
 }
 
-@misc{algendy,
+
+@article{algendy,
 	abstract = "On the surface of a rapidly rotating neutron star, the effective centrifugal force decreases the effective acceleration due to gravity (as measured in the rotating frame) at the equator while increasing the acceleration at the poles due to the centrifugal flattening of the star into an oblate spheroid. We compute the effective gravitational acceleration for relativistic rapidly rotating neutron stars and show that for a star with mass $M$, equatorial radius $R_e$, and angular velocity $\Omega$, the deviations of the effective acceleration due to gravity from the nonrotating case take on a universal form that depends only on the compactness ratio $M/R_e$, the dimensionless square of the angular velocity $\Omega^2R_e^3/GM$, and the latitude on the star's surface. This dependence is universal, in that it has very little dependence on the neutron star's equation of state. The effective gravity is expanded in the slow rotation limit to show the dependence on the effective centrifugal force, oblate shape of the star and the quadrupole moment of the gravitational field. In addition, an empirical fit and simple formula for the effective gravity is found. We find that the increase in the acceleration due to gravity at the poles is of the same order of magnitude as the decrease in the effective acceleration due to gravity at the equator for all realistic value of mass, radius and spin. For neutron stars that spin with frequencies near 600 Hz the difference between the effective gravity at the poles and the equator is about 20\%.",
 	archiveprefix = "arXiv",
 	author = "AlGendy, Mohammad and Morsink, Sharon M.",
 	comment = "published = 2014-04-02T16:46:18Z, updated = 2014-04-02T16:46:18Z, 13 pages, 3 figures",
 	doi = "10.1088/0004-637X/791/2/78",
 	eprint = "1404.0609v1",
+	journal = "The Astrophysical Journal, 791, 2, 78, 11 ",
 	month = apr,
 	primaryclass = "astro-ph.HE",
-	title = "{Universality of the Acceleration Due to Gravity on the Surface of a Rapidly Rotating Neutron Star}",
 	url = "http://arxiv.org/abs/1404.0609v1; http://arxiv.org/pdf/1404.0609v1",
 	x-fetchedfrom = "arXiv.org",
 	year = "2014"
 }
 
 @book{mtw,
-	added-at = "2010-07-23T07:14:55.000+0200",
-	annote = "[rus. p\v{r}eklad Мир, Москвa 1977, 1982]",
 	author = "Misner, Ch.W. and Thorne, K.S. and Wheeler, J.A.",
-	biburl = "http://www.bibsonomy.org/bibtex/230cdee961d7fec78dfec16d28e0c4670/richterek",
-	interhash = "7a7eb19ea0ce2867c6ae85d9e291244a",
-	intrahash = "30cdee961d7fec78dfec16d28e0c4670",
-	keywords = "astrophysics; general\_relativity",
-	mendeley-tags = "astrophysics,general\_relativity",
 	publisher = "W. Freeman",
-	timestamp = "2010-07-23T07:15:03.000+0200",
 	title = "{Gravitation}",
-	type = "Book",
-	x-fetchedfrom = "Bibsonomy",
 	year = 1973
 }
 
@@ -150,7 +141,7 @@
 	comment = "published = 2004-05-13T17:54:43Z, updated = 2004-05-13T17:54:43Z, 22 pages, 4 figures and 1 table",
 	doi = "10.1126/science.1090720",
 	eprint = "astro-ph/0405262v1",
-	journal = "Science 304:536-542",
+	journal = "Science, 304, 536-542",
 	month = may,
 	primaryclass = "astro-ph",
 	title = "{The Physics of Neutron Stars}",
@@ -161,7 +152,7 @@
 
 @article{rhoades,
 	author = "Rhoades, C.E. and Ruffini, R.",
-	journal = "Phys. Rev. Lett. 32, 324",
+	journal = "Phys. Rev. Lett., 32, 324",
 	title = "{Maximum Mass of a Neutron Star}",
 	year = "1974"
 }
@@ -188,7 +179,7 @@
 
 @article{twocompmod,
 	author = "{Gierli\'{ }nski}, M. and Done, C. and Barret, D.",
-	journal = "MNRAS 331, 141",
+	journal = "MNRAS, 331, 141",
 	title = "{Phase-resolved X-ray spectroscopy of the millisecond pulsar SAX J1808.4---3658}",
 	year = "2002"
 }
@@ -207,7 +198,7 @@
 	comment = "published = 2003-03-04T16:54:23Z, updated = 2003-03-04T16:54:23Z, 11 pages, 7 figures, submitted to MNRAS",
 	doi = "10.1046/j.1365-8711.2003.06773.x",
 	eprint = "astro-ph/0303084v1",
-	journal = "MNRAS 343, 1301",
+	journal = "MNRAS, 343, 1301",
 	month = mar,
 	primaryclass = "astro-ph",
 	title = "{On the Nature of the X-ray Emission from the Accreting Millisecond Pulsar SAX J1808.4-3658}",
@@ -223,7 +214,7 @@
 	comment = "published = 2002-01-08T21:07:49Z, updated = 2002-01-08T21:07:49Z, accepted to ApJ Letters",
 	doi = "10.1086/339511",
 	eprint = "astro-ph/0201117v1",
-	journal = "Astrophys.J. 566 (2002) L85-L88",
+	journal = "Astrophys.J., 566, L85-L88",
 	month = jan,
 	primaryclass = "astro-ph",
 	title = "{Gravitational Bending of Light Near Compact Objects}",
@@ -248,7 +239,7 @@
 
 @article{ensemble1,
 	author = "Goodman, J. and Weare, J.",
-	journal = "Commun. Appl. Math. Comput. Sci. 5, 65--80",
+	journal = "Commun. Appl. Math. Comput. Sci., 5, 65-80",
 	title = "{Ensemble Samplers with Affine Invariance}",
 	year = "2010"
 }
@@ -271,7 +262,6 @@
 	isbn = "3-527-40760-X, 978-3-527-40760-6",
 	keywords = "Monte-Carlo-Simulation",
 	language = "eng",
-	pages = "XII, 203 S.",
 	publisher = "WILEY-VCH",
 	timestamp = "2009-10-26T17:15:13.000+0100",
 	title = "{Monte Carlo methods}",
@@ -279,13 +269,14 @@
 	year = 2008
 }
 
-@misc{emceehammer,
+@article{emceehammer,
 	abstract = "We introduce a stable, well tested Python implementation of the affine-invariant ensemble sampler for Markov chain Monte Carlo (MCMC) proposed by Goodman \&amp; Weare (2010). The code is open source and has already been used in several published projects in the astrophysics literature. The algorithm behind emcee has several advantages over traditional MCMC sampling methods and it has excellent performance as measured by the autocorrelation time (or function calls per independent sample). One major advantage of the algorithm is that it requires hand-tuning of only 1 or 2 parameters compared to $\sim N^2$ for a traditional algorithm in an N-dimensional parameter space. In this document, we describe the algorithm and the details of our implementation and API. Exploiting the parallelism of the ensemble method, emcee permits any user to take advantage of multiple CPU cores without extra effort. The code is available online at http://dan.iel.fm/emcee under the MIT License.",
 	archiveprefix = "arXiv",
 	author = "Foreman-Mackey, Daniel and Hogg, David W. and Lang, Dustin and Goodman, Jonathan",
 	comment = "published = 2012-02-16T20:41:19Z, updated = 2013-11-25T15:56:48Z, Code re-licensed under MIT",
 	doi = "10.1086/670067",
 	eprint = "1202.3665v4",
+	journal = "Publications of the Astronomical Society of Pacific, 125, 925, 306-312",
 	month = nov,
 	primaryclass = "astro-ph.IM",
 	title = "{emcee: The MCMC Hammer}",
@@ -337,7 +328,7 @@
 	intrahash = "06f22d1e8d42fd18723a51ac3679b607",
 	journal = "Biometrika",
 	keywords = "imported",
-	pages = "97--109",
+	pages = "97-109",
 	timestamp = "2011-05-10T10:42:42.000+0200",
 	title = "{Monte {C}arlo methods using {M}arkov chains and their applications}",
 	volume = 57,
@@ -352,7 +343,7 @@
 	comment = "published = 2006-12-15T17:22:23Z, updated = 2006-12-15T17:22:23Z, 70 pages, 19 figures, submitted to Hans Bethe Centennial Physics Reports",
 	doi = "10.1016/j.physrep.2007.02.003",
 	eprint = "astro-ph/0612440v1",
-	journal = "Phys.Rept.442:109-165",
+	journal = "Phys.Rept., 442, 109-165",
 	month = dec,
 	primaryclass = "astro-ph",
 	title = "{Neutron Star Observations: Prognosis for Equation of State Constraints}",
@@ -368,7 +359,7 @@
 	comment = "published = 2010-07-10T22:02:28Z, updated = 2010-10-26T15:13:48Z, 4 pages, 4 figures; NORDITA-2010-45",
 	doi = "10.1103/PhysRevLett.105.161102",
 	eprint = "1007.1746v2",
-	journal = "Phys.Rev.Lett.105:161102",
+	journal = "Phys.Rev.Lett., 105, 161102",
 	month = oct,
 	primaryclass = "nucl-th",
 	title = "{Constraints on neutron star radii based on chiral effective field theory interactions}",
@@ -384,7 +375,7 @@
 	comment = "published = 2013-05-15T14:59:02Z, updated = 2013-05-15T14:59:02Z, 61 pages including 13 figures",
 	doi = "10.1146/annurev-nucl-102711-095018",
 	eprint = "1305.3510v1",
-	journal = "Annu. Rev. Nucl. Part. Sci. 62, 485",
+	journal = "Annu. Rev. Nucl. Part. Sci., 62, 485",
 	month = may,
 	primaryclass = "nucl-th",
 	title = "{The Nuclear Equation of State and Neutron Star Masses}",
@@ -400,11 +391,78 @@
 	comment = "published = 1998-04-13T21:50:12Z, updated = 1998-04-13T21:50:12Z, 39 pages RevTeX including 12 tables. 21 postscript figures. Submitted to Phys. Rev. C",
 	doi = "10.1103/PhysRevC.58.1804",
 	eprint = "nucl-th/9804027v1",
-	journal = "Phys.Rev.C58:1804-1828",
+	journal = "Phys.Rev., C58, 1804-1828",
 	month = apr,
 	primaryclass = "nucl-th",
 	title = "{The equation of state for nucleon matter and neutron star structure}",
 	url = "http://arxiv.org/abs/nucl-th/9804027v1; http://arxiv.org/pdf/nucl-th/9804027v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "1998"
+}
+
+@article{gold68,
+	author = "Gold, T.",
+	journal = "Nature, 218, 5143, 731-732",
+	title = "{Rotating Neutron Stars as the Origin of the Pulsating Radio Sources}",
+	year = "1968"
+}
+
+@book{frank85,
+	author = "Frank, J. and King, A. R. and Raine, D. J.",
+	publisher = "Cambridge University Press",
+	title = "{Accretion Power in Astrophysics}",
+	year = "1985"
+}
+
+@article{zandsax1808,
+	abstract = "We report the discovery of a fairly bright transient during observations with the Wide Field Cameras on board the BeppoSAX satellite in September 1996. It was detected at a peak intensity of 0.1 Crab (2 to 10 keV) and lasted between 6 and 40 days above a detection threshold of 2 mCrab. Two very bright type I X-ray bursts were detected from this transient in the same observations. These almost certainly identify this X-ray transient as a low-mass X-ray binary with a neutron star as compact component. The double-peaked time history of both bursts at high energies suggests a peak luminosity close to the Eddington limit. Assuming this to be true implies a distance to this object of 4 kpc.",
+	archiveprefix = "arXiv",
+	author = "in 't Zand, J. J. M. and Heise, J. and Muller, J. M. and Bazzano, A. and Cocchi, M. and Natalucci, L. and Ubertini, P.",
+	comment = "published = 1998-02-09T08:34:03Z, updated = 1998-02-09T08:34:03Z, 4 pages, 4 figures, published in A\&amp;A March II 1998 issue",
+	eprint = "astro-ph/9802098v1",
+	journal = "Astron.Astrophys., 331, L25-L28",
+	month = feb,
+	primaryclass = "astro-ph",
+	title = "{Discovery of the X-ray transient SAX J1808.4-3658, a likely low mass X-ray binary}",
+	url = "http://arxiv.org/abs/astro-ph/9802098v1; http://arxiv.org/pdf/astro-ph/9802098v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "1998"
+}
+
+@article{wijnandssax1808,
+	author = "Wijnands, R. and {Van der Klis}, M.",
+	journal = "Nature, 394, 6691, 344-346",
+	title = "{A millisecond pulsar in an X-ray binary system}",
+	year = "1998"
+}
+
+@article{madej,
+	abstract = "We analyzed archival X-ray spectra of MXB 1728-34 obtained in 1996-99 by the Proportional Counter Array on board of the RXTE satellite. X-ray spectra were fitted to our extensive grids of model atmosphere spectra to determine the effective temperature T\_eff on the neutron star surface, logarithm of surface gravity log(g), and the gravitational redshift z simultaneously. We have chosen fitting by numerical model spectra plus broad Gaussian line, modified by interstellar absorption and the absorption on dust. We arbitrarily assumed either hydrogen-helium chemical composition of a model atmosphere, or H-He-Fe mixture in solar proportion. The statistically best values of log(g), and z subsequently were used to determine mass and radius of the neutron star. We obtained the best values of the parameters for the neutron star in X-ray burst source MXB 1728-34: mass either M=0.40 or 0.63 M\_sol (for H-He or H-He-Fe models, respectively), radius R=4.6 or 5.3 km, log(g)=14.6 or 14.6 and the gravitational redshift z=0.14 or 0.22. All the above parameters have very wide 1-sigma confidence limits. Their values strongly support the equation of state for strange matter in MXB 1728-34.",
+	archiveprefix = "arXiv",
+	author = "Majczyna, A. and Madej, J.",
+	comment = "published = 2006-01-04T12:39:12Z, updated = 2006-01-04T12:39:12Z, Acta Astonomica in print",
+	eprint = "astro-ph/0601076v1",
+	journal = "Acta Astron., 55, 1-16",
+	month = jan,
+	primaryclass = "astro-ph",
+	title = "{Mass and radius determination for the neutron star in X-ray burst source 4U/MXB 1728-34}",
+	url = "http://arxiv.org/abs/astro-ph/0601076v1; http://arxiv.org/pdf/astro-ph/0601076v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2006"
+}
+
+@article{millerlamb98,
+	abstract = "The discovery of high-amplitude brightness oscillations at the spin frequency or its first overtone in six neutron stars in low-mass X-ray binaries during type~1 X-ray bursts provides a powerful new way to constrain the compactness of these stars, and hence to constrain the equation of state of the dense matter in all neutron stars. Here we present the results of general relativistic calculations of the maximum fractional rms amplitudes that can be observed during bursts. In particular, we determine the dependence of the amplitude on the compactness of the star, the angular dependence of the emission from the surface, the rotational velocity at the stellar surface, and whether there are one or two emitting poles. We show that if two poles are emitting, as is strongly indicated by independent evidence in 4U 1636-536 and KS 1731-26, the resulting limits on the compactness of the star can be extremely restrictive. We also discuss the expected amplitudes of X-ray color oscillations and the observational signatures necessary to derive convincing constraints on neutron star compactness from the amplitudes of burst oscillations.",
+	archiveprefix = "arXiv",
+	author = "Miller, M. Coleman and Lamb, Frederick K.",
+	comment = "published = 1997-11-26T21:38:43Z, updated = 1997-11-26T21:38:43Z, 8 pages plus one figure, AASTeX v. 4.0, submitted to The Astrophysical Journal Letters",
+	doi = "10.1086/311335",
+	eprint = "astro-ph/9711325v1",
+	journal = "Astrophys.J., 499, L37",
+	month = nov,
+	primaryclass = "astro-ph",
+	title = "{Bounds on the Compactness of Neutron Stars from Brightness Oscillations}",
+	url = "http://arxiv.org/abs/astro-ph/9711325v1; http://arxiv.org/pdf/astro-ph/9711325v1",
 	x-fetchedfrom = "arXiv.org",
 	year = "1998"
 }
