--- a/mythesis.tex
+++ b/mythesis.tex
@@ -296,16 +296,16 @@ where $P$ and $\rho$ are the pressure and mass-energy density, respectively, and
 %https://arxiv.org/pdf/1206.2727v4.pdf
 
 
-Rotating neutron stars were first detected as radio pulsars in 1967. %\cite{gold68} %http://adsabs.harvard.edu/abs/1968Natur.218..731G
+Rotating neutron stars were first detected as radio pulsars in 1967 \cite{gold68}. %http://adsabs.harvard.edu/abs/1968Natur.218..731G
 After that many different classes of pulsars have been discovered including low mass X-ray binaries (LMXBs). LMXB is a system in which the neutron accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim  M_{\odot}$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) is a subgroup of the LMXBs, in which the gas from the accretion disk (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. This gives rise to the X-ray pulsations typically with periods of a few milliseconds corresponding the spin frequency of the neutron star. By definition AMXPs are spinning at frequencies $\nu \ge 100 \, \mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$) ~\cite{patruno}. 
 
-The transfer of mass occurs in all known AMXPs via Roche lobe overflow from the donor star. The equipotential surface of the binary systems gravitational and centrifugal forces (surrounding the star) is known as Roche lobe. Both the neutron star and the companion have their own lobes that  only join at a inner Lagrangian point $L_{1}$.%\cite{frank85} http://adsabs.harvard.edu/abs/1985Sci...230.1269F (book in Tuorla)
+The transfer of mass occurs in all known AMXPs via Roche lobe overflow from the donor star. The equipotential surface of the binary systems gravitational and centrifugal forces (surrounding the star) is known as Roche lobe. Both the neutron star and the companion have their own lobes that  only join at a inner Lagrangian point $L_{1}$ \cite{frank85}. %http://adsabs.harvard.edu/abs/1985Sci...230.1269F (book in Tuorla)
 In the case when the Roche lobe of the companion is fulfilled by matter, the gas starts to flow through to the Lagrangian point. An accretion disk is formed because of the rotation of the pulsar.
  
 
-The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite %%cite{zandsax1808} %http://adsabs.harvard.edu/abs/1998A%26A...331L..25I
-The first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998. %cite{wijnandssax1808} http://adsabs.harvard.edu/abs/1998Natur.394..344W
-It provided a confirmation of the "recycling scenario", which states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slowly rotating neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$) ~\cite{patruno}. The idea is that a weakening magnetic field allows accretion to happen, which results in a increase of the spin frequency of the pulsar.
+The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite cite{zandsax1808}. %http://adsabs.harvard.edu/abs/1998A%26A...331L..25I
+The first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998 \cite{wijnandssax1808}. %http://adsabs.harvard.edu/abs/1998Natur.394..344W
+It provided a confirmation of the "recycling scenario", which states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slowly rotating neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$) \cite{patruno}. The idea is that a weakening magnetic field allows accretion to happen, which results in a increase of the spin frequency of the pulsar.
 
 
 %SAX J1808.4–3658 went into outburst again in 2000, 2002, 2005, 2008 and 2011,
@@ -320,7 +320,7 @@ After the two first outbursts SAX J1808.4–3658 has gone into outburst several 
 %pulse profiles from which %phase?
 
 
-The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model, which includes a blackbody at lower energies and a hard Comptonization component at higher energies ~\cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
+The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model, which includes a blackbody at lower energies and a hard Comptonization component at higher energies \cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
 . The heated hot spot on the neutron star surface is interpreted to produce the blackbody flux. The Comptonization is produced above the spot in a accretion shock. This shock is created as the plasma abruptly decelerates close to the neutron star surface at the bottom of the magnetic field lines.
 
 
@@ -352,7 +352,7 @@ have revealed the possible presence of jets.
 
 \section{Methods}
 
-There have been many different attempts to constrain the masses and radii of neutron stars and thus also the possible equations of state. For example one approach is the so called cooling tail method, where the observed cooling tracks of thermonuclear X-ray bursts are compared to the accurate theoretical atmosphere model calculations \cite{nattila_bayes}. One other approach to measure $M$ and $R$ is to fit detailed spectral models to high-precision measurements of X-ray burst spectra. %\cite{madej} %http://adsabs.harvard.edu/abs/2005AcA....55..349M
+There have been many different attempts to constrain the masses and radii of neutron stars and thus also the possible equations of state. For example one approach is the so called cooling tail method, where the observed cooling tracks of thermonuclear X-ray bursts are compared to the accurate theoretical atmosphere model calculations \cite{nattila_bayes}. One other approach to measure $M$ and $R$ is to fit detailed spectral models to high-precision measurements of X-ray burst spectra \cite{madej}. %http://adsabs.harvard.edu/abs/2005AcA....55..349M
 This however requires very high-precision spectral data. 
 
 The approach we use here is to fit pulse profile models to observations of these pulses during a X-ray burst. In this section we first present our waveform model and then the Bayesian methods we use to get constraints for the parameters of the model. The final aim is to combine constraints obtained with different approaches.
@@ -360,9 +360,9 @@ The approach we use here is to fit pulse profile models to observations of these
 \subsection{Pulse profile modeling}
 
 
-The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modeled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998 %\cite{millerlamb98}%http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
-, Poutanen, Gierlinski 2003 ~\cite{poutagierlinskisax}). In the S+D approximation the effects of general relativity (gravitational light-bending) are modeled as though the star is not rotating using the Schwarzschild metric and the formalism specified by
-Pechenick, Ftaclas and Cohen (1983)~\cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
+The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modeled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998 \cite{millerlamb98}%http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
+, Poutanen, Gierlinski 2003 \cite{poutagierlinskisax}). In the S+D approximation the effects of general relativity (gravitational light-bending) are modeled as though the star is not rotating using the Schwarzschild metric and the formalism specified by
+Pechenick, Ftaclas and Cohen (1983) \cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
 %Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
@@ -381,7 +381,7 @@ Due to the fast rotation the millisecond pulsars have an oblate shape instead of
 
 There are different models describing the exact shape and oblateness of the neutron star (function $R(\theta)$, where $\theta$ is the colatitude measured from the spin axis).
 %The exact shape and oblateness of the star (function $R(\theta)$) can be chosen from different models ($\theta$ is the colatitude measured from the spin axis).
-One of the most recent ones was presented by Algendy et. al. (2014) ~\cite{algendy}. 
+One of the most recent ones was presented by Algendy et. al. (2014) \cite{algendy}. 
 It is also the model we use in this thesis. In that model (in geometric units
 where G = c = 1)
 
