--- a/bib1.bib
+++ b/bib1.bib
@@ -430,7 +430,7 @@
 }
 
 @article{wijnandssax1808,
-	author = "Wijnands, R. and {Van der Klis}, M.",
+	author = "Wijnands, R. and {van der Klis}, M.",
 	journal = "Nature, 394, 6691, 344-346",
 	title = "{A millisecond pulsar in an X-ray binary system}",
 	year = "1998"
@@ -466,4 +466,31 @@
 	x-fetchedfrom = "arXiv.org",
 	year = "1998"
 }
+
+
+@book{lightman75,
+	author = "Lightman, A. P. and Press, W. H. and Price, R. H. and Teukolsky, S. A.", 
+	publisher = "Princeton University Press",
+	title = "{Problem book in relativity and gravitation}",
+	year = "1975"
+}
+
+@article{Terrell,
+	author = "Terrell, J.",
+	journal = "Phys. Rev., 116, 1041",
+	title = "{Invisibility of the Lorentz Contraction}",
+	year = "1959"
+}
+
+@book{rybicki,
+	author = "Rybicki, G. B. and Lightman, A. P.",
+	publisher = "Wiley-Interscience",
+	title = "{Radiative Processes in Astrophysics}",
+	year = "1979"
+}
+
+
+
+
+
 
